App #575: IMPORTANT FIXES for scrolling problems, mostly on iOS, but too on any webkit/blink engine when doing programatic scroll as in Clients (using letters index). Changed general NavBar and Activity Layout to fight iOS problems, changing from fixed to absolute positioning and the scroll context. Lot of issues fixed with this but other bad side effects may happen, needs more testing

--- a/prototypes/app/source/css/components/Activity.styl
+++ b/prototypes/app/source/css/components/Activity.styl
@@ -1,15 +1,18 @@
 /** Activity component **/
 
 @import 'ActivityNavbar.styl';
+@import 'SmartNavBar.styl';
 
 Activity() {
+    // Corretly getting space, scrolling context and fixing SmartNavBar:    
+    SmartViewContent();
+    
     /* settings specially important for the use of navbar
        but applied to all for consistent results
        with/without navbar
     */
     min-height: 100%;
     position: relative;
-    overflow: auto;
 
     // Set a full height with 100% is complicated, mainly because of iOS,
     // so a specific class is used that involve some javascript code to
